# z-billing

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs  types.rs
core/src/: account.rs  credits.rs  ids.rs  lib.rs
crates/z-billing-client/: Cargo.toml
crates/z-billing-client/src/: client.rs  lib.rs  types.rs
crates/z-billing-core/: Cargo.toml
crates/z-billing-core/src/: account.rs  credits.rs  error.rs  ids.rs  lib.rs  pricing.rs  usage.rs
crates/z-billing-lago/: Cargo.toml
crates/z-billing-lago/src/: config.rs  deploy.rs  error.rs  lib.rs
crates/z-billing-service/: Cargo.toml
crates/z-billing-service/src/: anthropic_cost.rs  auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  mixpanel.rs  routes.rs  state.rs
crates/z-billing-service/src/handlers/: accounts.rs  checkout_pages.rs  credits.rs  mod.rs  subscriptions.rs  usage.rs  webhooks.rs  ws.rs
crates/z-billing-service/src/lago/: client.rs  mod.rs  types.rs
crates/z-billing-service/src/stripe/: client.rs  types.rs
crates/z-billing-service/tests/: accounts.rs  common.rs  credits.rs  health.rs  lago_integration.rs  stripe_integration.rs  usage.rs
crates/z-billing-store/: Cargo.toml
crates/z-billing-store/migrations/: 0001_create_accounts.sql  0002_create_processed_webhooks.sql  0003_add_grant_timestamps.sql  0004_add_referred_by.sql
crates/z-billing-store/src/: error.rs  keys.rs  lib.rs  postgres.rs  rocks.rs
docs/: cost-observability.md
docs/spec/v0.1.0/: 01-overview.md  02-identifiers.md  03-accounts.md  04-credits.md  05-pricing.md  06-usage.md  07-storage.md  08-authentication.md  09-api.md  10-integrations.md  11-lago-deployment.md
service/: Cargo.toml
service/src/: auth.rs  config.rs  error.rs  lib.rs  routes.rs  state.rs
service/src/handlers/: accounts.rs  credits.rs  health.rs  mod.rs  usage.rs  webhooks.rs
service/src/lago/: client.rs  mod.rs
service/src/stripe/: client.rs  mod.rs
service/tests/: common.rs  credits.rs  lago_integration.rs  live_api.rs  stripe_integration.rs  usage.rs
store/: Cargo.toml
store/src/: error.rs  keys.rs  lib.rs  rocks.rs  schema.rs
