[workspace]
members = ["client", "core", "service", "store"]
default-members = ["service"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Zero Tech"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Authentication
jsonwebtoken = "9"

# Database
rocksdb = "0.22"

# Utilities
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Dev dependencies
tempfile = "3"
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
