[package]
name = "z-billing-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Client SDK for z-billing service"

[dependencies]
z-billing-core = { path = "../core" }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio.workspace = true

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }

[lints]
workspace = true
