[package]
name = "z-billing-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RocksDB storage layer for z-billing"

[dependencies]
z-billing-core = { path = "../core" }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
