[package]
name = "z-billing-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types for z-billing service"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
