[package]
name = "z-billing-lago"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Lago deployment and management for z-billing"

[dependencies]
tokio = { workspace = true, features = ["process"] }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
